--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
             </section>
             <section>
                 <ul>
-                    <li>
-                        <img src="./img/projects-img1.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Технокряк</h3>
-                        <p>Веб-сайт</p>
-                    </li>
+                    <li> <div>
+                        <div class="card">
+                        <div class="card__image image fake-image"> <img src="./img/projects-img1.jpg" alt="Картинка" width="370" height="294" /></div>
+                        <div class="card__text-container">
+                        <h3 class="card__tetle">Технокряк</h3>
+                        <p class="card__subtitle">Веб-сайт</p>
+                        </div>
+                    </div></li>
                     <li>
                         <img src="./img/projects-img2.jpg" alt="Картинка" width="370" height="294" />
                         <h3>Постер New Orlean vs Golden Star</h3>
