--- a/index.html
+++ b/index.html
@@ -4,100 +4,111 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>WebStudio</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
         <!-- ШАПКА САЙТА-->
-        <header>
+        <header class="header">
             <nav>
-                <a href="#">WebStudio</a>
+                <a href="#" class="logo">WebStudio</a>
                 <ul>
                     <li>
-                        <a href="#">Студия</a>
+                        <a href="#" class="site-nav current">Студия</a>
                     </li>
                     <li>
-                        <a href="#">Портфолио</a>
+                        <a href="./portfolio.html" class="site-nav">Портфолио</a>
                     </li>
                     <li>
-                        <a href="#">Контакты</a>
+                        <a href="#" class="site-nav">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <address>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="address">+38 096 111 11 11</a>
             </address>
         </header>
         <!-- /ШАПКА САЙТА  -->
         <main>
-            <section>
+            <section class="heading">
+                <h1 class="heading-title">Эффективные решения для вашего бизнеса</h1>
+                <a href="#" class="button primary">Заказать услугу</a>
+            </section>
+            <section class="sectiion">
                 <ul>
-                    <li><button>Все</button></li>
-                    <li><button>Веб-сайты</button></li>
-                    <li><button>Приложения</button></li>
-                    <li><button>Дизайн</button></li>
-                    <li><button>Маркетинг</button></li>
+                    <li>
+                        <h3 class="section-title">Внимание к деталям</h3>
+                        <p class="section-text">
+                            Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="section-title">Пунктуальность</h3>
+                        <p class="section-text">
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="section-title">Планирование</h3>
+                        <p class="section-text">
+                            Равным образом консультация с широким активом в значительной степени обуславливает.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="section-title">Современные технологии</h3>
+                        <p class="section-text">
+                            Copy Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
                 </ul>
             </section>
-            <section>
+            <section class="sectiion">
+                <h2 class="section-tetle">Чем мы занимаемся</h2>
                 <ul>
-                    <li> <div>
-                        <div class="card">
-                        <div class="card__image image fake-image"> <img src="./img/projects-img1.jpg" alt="Картинка" width="370" height="294" /></div>
-                        <div class="card__text-container">
-                        <h3 class="card__tetle">Технокряк</h3>
-                        <p class="card__subtitle">Веб-сайт</p>
-                        </div>
-                    </div></li>
                     <li>
-                        <img src="./img/projects-img2.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
+                        <img src="./img/layout.jpg" alt="планирование и создание сайтов" width="370" height="294" />
                     </li>
                     <li>
-                        <img src="./img/projects-img3.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                        <img src="./img/synchronization.jpg" alt="разработка приложений" width="370" height="294" />
                     </li>
                     <li>
-                        <img src="./img/projects-img4.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Проект Prime</h3>
-                        <p>Маркетинг</p>
+                        <img src="./img/design.jpg" alt="подбор дизайна" width="370" height="294" />
+                    </li>
+                </ul>
+            </section>
+            <section class="team">
+                <h2 class="section-title">Наша команда</h2>
+                <ul>
+                    <li>
+                        <img src="./img/igor.jpg" alt="Игорь Демьяненко" width="810" height="780" />
+                        <h3 class="section-title">Игорь Демьяненко</h3>
+                        <p class="ttam-profession">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./img/projects-img5.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Проект Boxes</h3>
-                        <p>Приложение</p>
+                        <img src="./img/olga.jpg" alt="Ольга Репина" width="810" height="780" />
+                        <h3 class="section-title">Ольга Репина</h3>
+                        <p class="ttam-profession">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./img/projects-img6.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <img src="./img/nikoli.jpg" alt="Николай Тарасов" width="810" height="780" />
+                        <h3 class="section-title">Николай Тарасов</h3>
+                        <p class="ttam-profession">Marketing</p>
                     </li>
                     <li>
-                        <img src="./img/projects-img7.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Издание Limited Edition</h3>
-                        <p>Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./img/projects-img8.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Проект LAB</h3>
-                        <p>Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./img/projects-img9.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Growing Business</h3>
-                        <p>Приложение</p>
+                        <img src="./img/mihail.jpg" alt="Михаил Ермаков" width="810" height="780" />
+                        <h3 class="section-title">Михаил Ермаков</h3>
+                        <p class="ttam-profession">UI Designer</p>
                     </li>
                 </ul>
             </section>
         </main>
-        <footer>
-            <a href="#">WebStudio</a>
-            <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <footer class="footer">
+            <a href="#" class="logo">WebStudio</a>
+            <address class="footer-address">
+                <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <br />
+                <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
         </footer>
     </body>
