--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <!-- ШАПКА САЙТА-->
         <header class="header">
             <nav>
-                <a href="#" class="logo">WebStudio</a>
+                <a href="#" class="logo">Web</a>
+                <a href="#" class="logo-too">Studio</a>
                 <ul>
                     <li>
                         <a href="#" class="site-nav current">Студия</a>
@@ -63,7 +64,7 @@
                 </ul>
             </section>
             <section class="sectiion">
-                <h2 class="section-tetle">Чем мы занимаемся</h2>
+                <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul>
                     <li>
                         <img src="./img/layout.jpg" alt="планирование и создание сайтов" width="370" height="294" />
@@ -80,30 +81,39 @@
                 <h2 class="section-title">Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./img/igor.jpg" alt="Игорь Демьяненко" width="810" height="780" />
-                        <h3 class="section-title">Игорь Демьяненко</h3>
-                        <p class="ttam-profession">Product Designer</p>
+                        <div class="card">
+                            <img src="./img/igor.jpg" alt="Игорь Демьяненко" width="810" height="780" />
+                            <h3 class="card-ttle">Игорь Демьяненко</h3>
+                            <p class="ttam-profession">Product Designer</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/olga.jpg" alt="Ольга Репина" width="810" height="780" />
-                        <h3 class="section-title">Ольга Репина</h3>
-                        <p class="ttam-profession">Frontend Developer</p>
+                        <div class="card">
+                            <img src="./img/olga.jpg" alt="Ольга Репина" width="810" height="780" />
+                            <h3 class="card-ttle">Ольга Репина</h3>
+                            <p class="card-subtitle">Frontend Developer</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/nikoli.jpg" alt="Николай Тарасов" width="810" height="780" />
-                        <h3 class="section-title">Николай Тарасов</h3>
-                        <p class="ttam-profession">Marketing</p>
+                        <div class="card">
+                            <img src="./img/nikoli.jpg" alt="Николай Тарасов" width="810" height="780" />
+                            <h3 class="card-ttle">Николай Тарасов</h3>
+                            <p class="card-subtitle">Marketing</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/mihail.jpg" alt="Михаил Ермаков" width="810" height="780" />
-                        <h3 class="section-title">Михаил Ермаков</h3>
-                        <p class="ttam-profession">UI Designer</p>
+                        <div class="card">
+                            <img src="./img/mihail.jpg" alt="Михаил Ермаков" width="810" height="780" />
+                            <h3 class="card-ttle">Михаил Ермаков</h3>
+                            <p class="card-subtitle">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </section>
         </main>
         <footer class="footer">
-            <a href="#" class="logo">WebStudio</a>
+            <a href="#" class="logo">Web</a>
+            <a href="#" class="logo-to">Studio</a>
             <address class="footer-address">
                 <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
                 <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
