--- a/portfolio.html
+++ b/portfolio.html
@@ -3,101 +3,119 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>WebStudio</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
         <!-- ШАПКА САЙТА-->
-        <header>
+        <header class="header">
             <nav>
-                <a href="#">WebStudio</a>
+                <a href="#" class="logo">Web</a>
+                <a href="#" class="logo-too">Studio</a>
                 <ul>
                     <li>
-                        <a href="#">Студия</a>
+                        <a href="./index.html" class="site-nav">Студия</a>
                     </li>
                     <li>
-                        <a href="#">Портфолио</a>
+                        <a href="./package.json" class="site-nav current">Портфолио</a>
                     </li>
                     <li>
-                        <a href="#">Контакты</a>
+                        <a href="#" class="site-nav">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <address>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="address">+38 096 111 11 11</a>
             </address>
         </header>
         <!-- /ШАПКА САЙТА  -->
         <main>
             <section>
                 <ul>
-                    <li><button>Все</button></li>
-                    <li><button>Веб-сайты</button></li>
-                    <li><button>Приложения</button></li>
-                    <li><button>Дизайн</button></li>
-                    <li><button>Маркетинг</button></li>
+                    <li><button class="button">Все</button></li>
+                    <li><button class="button">Веб-сайты</button></li>
+                    <li><button class="button">Приложения</button></li>
+                    <li><button class="button">Дизайн</button></li>
+                    <li><button class="button">Маркетинг</button></li>
                 </ul>
             </section>
             <section>
                 <ul>
-                    <li> <div>
+                    <li>
                         <div class="card">
-                        <div class="card__image image fake-image"> <img src="./img/projects-img1.jpg" alt="Картинка" width="370" height="294" /></div>
-                        <div class="card__text-container">
-                        <h3 class="card__tetle">Технокряк</h3>
-                        <p class="card__subtitle">Веб-сайт</p>
+                            <img src="./img/projects-img1.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Технокряк</h3>
+                            <p class="card-subtitle">Веб-сайт</p>
                         </div>
-                    </div></li>
-                    <li>
-                        <img src="./img/projects-img2.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Постер New Orlean vs Golden Star</h3>
-                        <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./img/projects-img3.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Ресторан Seafood</h3>
-                        <p>Приложение</p>
+                        <div class="card">
+                            <img src="./img/projects-img2.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Постер New Orlean vs Golden Star</h3>
+                            <p class="card-subtitle">Дизайн</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/projects-img4.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Проект Prime</h3>
-                        <p>Маркетинг</p>
+                        <div class="card">
+                            <img src="./img/projects-img3.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Ресторан Seafood</h3>
+                            <p class="card-subtitle">Приложение</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/projects-img5.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Проект Boxes</h3>
-                        <p>Приложение</p>
+                        <div class="card">
+                            <img src="./img/projects-img4.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Проект Prime</h3>
+                            <p class="card-subtitle">Маркетинг</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/projects-img6.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Inspiration has no Borders</h3>
-                        <p>Веб-сайт</p>
+                        <div class="card">
+                            <img src="./img/projects-img5.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Проект Boxes</h3>
+                            <p class="card-subtitle">Приложение</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/projects-img7.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Издание Limited Edition</h3>
-                        <p>Дизайн</p>
+                        <div class="card">
+                            <img src="./img/projects-img6.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Inspiration has no Borders</h3>
+                            <p class="card-subtitle">Веб-сайт</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/projects-img8.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Проект LAB</h3>
-                        <p>Маркетинг</p>
+                        <div class="card">
+                            <img src="./img/projects-img7.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Издание Limited Edition</h3>
+                            <p class="card-subtitle">Дизайн</p>
+                        </div>
                     </li>
                     <li>
-                        <img src="./img/projects-img9.jpg" alt="Картинка" width="370" height="294" />
-                        <h3>Growing Business</h3>
-                        <p>Приложение</p>
+                        <div class="card">
+                            <img src="./img/projects-img8.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Проект LAB</h3>
+                            <p class="card-subtitle">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card">
+                            <img src="./img/projects-img9.jpg" alt="Картинка" width="370" height="294" />
+                            <h3 class="card-ttle">Growing Business</h3>
+                            <p class="card-subtitle">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </section>
         </main>
-        <footer>
-            <a href="#">WebStudio</a>
-            <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <footer class="footer">
+            <a href="#" class="logo">Web</a>
+            <a href="#" class="logo-to">Studio</a>
+            <address class="footer-address">
+                <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+                <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <br />
+                <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
         </footer>
     </body>
